--- a/src/app/modules/core/pages/search/repository-search-results.component.html
+++ b/src/app/modules/core/pages/search/repository-search-results.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxFill="">
         <div class="results">
-            <mat-accordion>
+            <mat-accordion *ngIf="!(loading$ | async)">
                 <mat-expansion-panel *ngFor="let result of (results$ | async)?.artifact">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
