--- a/src/sass/layout/components/form.scss
+++ b/src/sass/layout/components/form.scss
@@ -2,7 +2,32 @@
   border-top: 1px solid #2c82bc;
   padding-top: 20px !important;
 
+  &.noBorder {
+    border-top: none;
+  }
+
   button {
     margin-right: 10px;
+  }
+}
+
+.inputFullWidth {
+  mat-form-field {
+    width: 100%;
+  }
+}
+
+
+form {
+  h3.blue-border {
+    margin: 10px 0px 10px 0px;
+    font-weight: 300;
+
+    &:after {
+      content: "";
+      height: 10px;
+      border-bottom: 1px solid #2c82bc;
+      display: block;
+    }
   }
 }
