SB-1310 Create system information page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -131,7 +131,12 @@
                             </a>
                         </li>
                         <li><a>Logs</a></li>
-                        <li><a>System information</a></li>
+                        <li>
+                            <a routerLink="admin/environment-info"
+                               routerLinkActive="active">
+                                System information
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
