--- a/src/app/modules/user-management/pages/manage-user/manage-user.component.scss
+++ b/src/app/modules/user-management/pages/manage-user/manage-user.component.scss
@@ -1,6 +1,6 @@
 ::ng-deep .mat-list-text {
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 600;
   font-family: 'Open Sans', sans-serif;
 
   small {
